--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: rgb(34, 34, 30);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -14,14 +15,17 @@ code {
 
 .top-right {
   position: fixed;
-  top: 10px; 
-  right: 10px; 
+  top: 15px; 
+  right: 10px;
+  margin-right: 1%; 
 }
 
 .top-left {
   position: fixed;
   top: 10px; 
-  left: 10px; 
+  left: 10px;
+  margin-top: 0%;
+  margin-left: 1%; 
 }
 
 .anchor {
